Sat Nov  5 01:43:59 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/PI/ClientRequestInfo.h (TAO_ClientRequestInfo):

	  Re-exported this class.  TAO's FT client side requires access to
	  it.

Fri Nov  4 11:57:12 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Versioned_Namespace.h:

	  Added TAO_ORBCONF_H include/define sanity check.

	* tao/Utils/Synch_Refcountable.h:

	  Include "tao/Versioned_Namespace.h" to pull in versioned
	  namespace macros.

Fri Nov  4 10:31:15 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/SmartProxies/Smart_Proxies.h:
	* tao/SmartProxies/Smart_Proxies.inl:
	* tao/Strategies/DIOP_Acceptor.cpp:
	* tao/Strategies/DIOP_Acceptor.h:
	* tao/Strategies/DIOP_Acceptor.i:
	* tao/Strategies/DIOP_Connection_Handler.cpp:
	* tao/Strategies/DIOP_Connection_Handler.h:
	* tao/Strategies/DIOP_Connector.cpp:
	* tao/Strategies/DIOP_Connector.h:
	* tao/Strategies/DIOP_Endpoint.cpp:
	* tao/Strategies/DIOP_Endpoint.h:
	* tao/Strategies/DIOP_Endpoint.i:
	* tao/Strategies/DIOP_Factory.cpp:
	* tao/Strategies/DIOP_Factory.h:
	* tao/Strategies/DIOP_Profile.cpp:
	* tao/Strategies/DIOP_Profile.h:
	* tao/Strategies/DIOP_Transport.cpp:
	* tao/Strategies/DIOP_Transport.h:
	* tao/Strategies/FIFO_Connection_Purging_Strategy.cpp:
	* tao/Strategies/FIFO_Connection_Purging_Strategy.h:
	* tao/Strategies/LFU_Connection_Purging_Strategy.cpp:
	* tao/Strategies/LFU_Connection_Purging_Strategy.h:
	* tao/Strategies/LF_Strategy_Null.cpp:
	* tao/Strategies/LF_Strategy_Null.h:
	* tao/Strategies/NULL_Connection_Purging_Strategy.cpp:
	* tao/Strategies/NULL_Connection_Purging_Strategy.h:
	* tao/Strategies/SCIOP_Acceptor.cpp:
	* tao/Strategies/SCIOP_Acceptor.h:
	* tao/Strategies/SCIOP_Acceptor.i:
	* tao/Strategies/SCIOP_Connection_Handler.cpp:
	* tao/Strategies/SCIOP_Connection_Handler.h:
	* tao/Strategies/SCIOP_Connector.cpp:
	* tao/Strategies/SCIOP_Connector.h:
	* tao/Strategies/SCIOP_Endpoint.cpp:
	* tao/Strategies/SCIOP_Endpoint.h: