@@ -1,3 +1,11 @@
+Sun Nov  6 14:34:51 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_visitor_valuetype/field_ch.cpp:
+        * TAO_IDLbe/be_visitor_valuetype/field_cs.cpp:
+        
+          Made the generated signature of member mutators
+          consistent with IN parameter semantics.
+
 Sat Nov  5 01:43:59 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* tao/PI/ClientRequestInfo.h (TAO_ClientRequestInfo):
